Enleve des erreur OSEF